--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logopinho-removebg-preview.png" class="nav-img " loading="lazy">
+            <img src="img/logopinho-removebg-preview.png" alt="https://pt.vecteezy.com/arte-vetorial/4641234-pine-logo-design-in-circle" title="logo de um pinho" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -40,13 +40,13 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/letras.png" class="mb-3" width="563"
+                    <img src="img/letras.png" alt="https://www.terezinhapinheiro.com.br/" title="nome da empresa" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/pngremove.png" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="img/pngremove.png" alt="A imagem é nossa marca" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
         </section>
@@ -54,7 +54,7 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/natureza.jpeg" alt=https://dicasmaonamassa.com.br/pinheiro-aprenda-a-cultivar-o-classico-de-natal/ title="plantação" "rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
