--- a/index.html
+++ b/index.html
@@ -57,12 +57,8 @@
                     <img src="img/natureza.jpeg" alt=https://dicasmaonamassa.com.br/pinheiro-aprenda-a-cultivar-o-classico-de-natal/ title="plantação" "rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>O que fazemos?</h2>
+                    <p class="p-2"> Te ajudamos a ter sua tão sonhada casa propria, Encontre o imóvel que você procura, de forma fácil, a qualquer hora e de qualquer lugar. As melhores ofertas de imóveis você encontra aqui.</p>
                 </div>
             </div>
         </section>
