--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/natureza.jpeg" alt=https://dicasmaonamassa.com.br/pinheiro-aprenda-a-cultivar-o-classico-de-natal/ title="plantação" "rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/imoveis1.webp" alt=https://dicasmaonamassa.com.br/pinheiro-aprenda-a-cultivar-o-classico-de-natal/ title="plantação" "rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>O que fazemos?</h2>
